# terraform_updater

./: README.md  pyproject.toml  terraform_stein_update.py
.github/workflows/: tests.yml
terraform_updater/: __init__.py  os_helpers.py
tests/: test_terraform_updater.py
tests/states/: 01_simple_vm.json
